# moidc

./: Cargo.toml  Dockerfile  README.md  private-key.pem  public-key.pem  settings.yaml
.github/workflows/: pipeline.yaml
src/: lib.rs  main.rs  settings.rs
tests/: oidc-client.rs
