[package]
name = "moidc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros"] }
base64 = "0.21.7"
chrono = { version = "0.4.34", features = ["serde"] }
config = "0.14.0"
openidconnect = "3.4.0"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["pem"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["tracing", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
reqwest = "0.11.24"
